--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT = 8000
+MONGO_DB_URI = mongodb+srv://shrey00710:uu6WYI7Cy9VKXGy3@cluster0.8wnfizl.mongodb.net/twizzy-chat-db?
+retryWrites=true&w=majority&appName=Cluster0
+uu6WYI7Cy9VKXGy3
