Updates Add: JWT Token to securely send data between two parties Add: Login & Logout routes Fix: Typo in bcrypt Add: generateTokenAndSetCookie for JWT Add: NODE_ENV.

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 PORT = 8000
+
 MONGO_DB_URI = mongodb+srv://shrey00710:uu6WYI7Cy9VKXGy3@cluster0.8wnfizl.mongodb.net/twizzy-chat-db?
 retryWrites=true&w=majority&appName=Cluster0
 uu6WYI7Cy9VKXGy3
+
+JWT_SECRET = YxnA/cxPFThAuOXGdYD/zOu8yMZE1M++9kQiS/Wq3I0=
+
+NODE_ENV=development
