--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "socket.io-client": "^4.7.5",
+    "twizzy-chat": "file:..",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
